# similaridade-cosseno-com-python

./: README.md  main.py  notebook.ipynb  pyproject.toml
