[project]
name = "sistema-recomendacao"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "kagglehub>=0.3.12",
    "nltk>=3.9.2",
    "notebook>=7.5.4",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pandas-stubs~=3.0.0",
    "scikit-learn>=1.8.0",
]
